update the README.md file to have more information related to model, task and relevant information

--- a/course/2 Neural Network Architectures/2.3 Multi-Modal Models/2.3.3 Transfer Learning/Document Image Classification/Fine_tune_LayoutLM_For_Document_Image_Classification_RVL_CDIP.ipynb
+++ b/course/2 Neural Network Architectures/2.3 Multi-Modal Models/2.3.3 Transfer Learning/Document Image Classification/Fine_tune_LayoutLM_For_Document_Image_Classification_RVL_CDIP.ipynb
@@ -19,9 +19,9 @@
         "\n",
         "In this notebook, we're going to go through fine-tuning LayoutLM Multimodal Model for Document Image Classification task with RVL-CDIP dataset\n",
         "\n",
-        "- Dataset hub at here\n",
-        "- Model hub at here\n",
-        "- Academic paper for LayoutLM at here"
+        "- Small dataset at [here](https://huggingface.co/datasets/sitloboi2012/rvl_cdip_small_dataset), if you want to test with larger dataset, link [here](https://huggingface.co/datasets/sitloboi2012/rvl_cdip_large_dataset)\n",
+        "- Model hub at [here](https://huggingface.co/docs/transformers/model_doc/layoutlm)\n",
+        "- Academic paper for LayoutLM at [here](https://huggingface.co/docs/transformers/model_doc/layoutlm)"
       ]
     },
     {
