convert bytes object to PIL

--- a/notebooks/Unit 3 - Vision Transformers/LoRA-Image-Classification.ipynb
+++ b/notebooks/Unit 3 - Vision Transformers/LoRA-Image-Classification.ipynb
@@ -104,7 +104,7 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "import torchvision.transforms as T\n",
-        "from datasets import load_dataset\n",
+        "from datasets import load_dataset, Image\n",
         "from transformers import AutoImageProcessor, ViTForImageClassification\n",
         "from transformers import Trainer, TrainingArguments\n",
         "import evaluate"
@@ -371,7 +371,7 @@
         }
       ],
       "source": [
-        "dataset = load_dataset('pcuenq/oxford-pets')"
+        "dataset = load_dataset('pcuenq/oxford-pets').cast_column('image', Image())"
       ],
       "id": "3a3af53d"
     },
