--- a/hub.ipynb
+++ b/hub.ipynb
@@ -82,10 +82,10 @@
       "execution_count": null,
       "metadata": {
         "id": "XSlZaJ9Iw_iZ",
-        "outputId": "b65af1a4-b648-45e5-c6eb-bcf2facb7cbc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b65af1a4-b648-45e5-c6eb-bcf2facb7cbc"
       },
       "outputs": [
         {
@@ -246,7 +246,107 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "      1/100      14.5G      1.396       3.84      1.614        324        640:  18%|█▊        | 21/119 [00:46<02:50,  1.74s/it]"
+            "      1/100      0.26G      1.257      3.135      1.457         19        640: 100%|██████████| 119/119 [04:16<00:00,  2.15s/it]\n",
+            "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 6/6 [00:22<00:00,  3.70s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                   all       1167       2348      0.371      0.423      0.392      0.234\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "      2/100      14.2G      1.132       1.83      1.364          1        640: 100%|██████████| 119/119 [04:31<00:00,  2.28s/it]\n",
+            "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 6/6 [00:20<00:00,  3.41s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                   all       1167       2348      0.424      0.408      0.314      0.158\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "      3/100      14.3G      1.173      1.631      1.389          2        640: 100%|██████████| 119/119 [03:42<00:00,  1.87s/it]\n",
+            "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 6/6 [00:19<00:00,  3.29s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                   all       1167       2348      0.108      0.277     0.0768     0.0311\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "      4/100      14.1G      1.233      1.586      1.431        349        640:  80%|███████▉  | 95/119 [02:58<00:59,  2.48s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WARNING: CUDA OutOfMemoryError in TaskAlignedAssigner, using CPU\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "      4/100      14.2G      1.223      1.559      1.426          7        640: 100%|██████████| 119/119 [03:52<00:00,  1.95s/it]\n",
+            "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 6/6 [00:13<00:00,  2.23s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                   all       1167       2348      0.271      0.286      0.173      0.103\n",
+            "\u001b[34m\u001b[1mUltralytics HUB: \u001b[0mUploading checkpoint https://hub.ultralytics.com/models/bo1n4qt5IUR7btlgn5z1\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "      5/100        14G       1.18      1.376      1.399          6        640: 100%|██████████| 119/119 [03:43<00:00,  1.87s/it]\n",
+            "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 6/6 [00:17<00:00,  2.88s/it]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                   all       1167       2348      0.525      0.222      0.168     0.0491\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "      6/100      12.9G      1.213      1.353      1.418        368        640:   1%|          | 1/119 [00:01<02:01,  1.03s/it]"
           ]
         }
       ],
